enabled calculation of float numbers

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button class="num two">2</button>
             <button class="operation divide">/</button>
             <button class="operation mulptiplication">x</button>
+            <button class="num point">.</button>
             <button class="num zero">0</button>
             <button class="equals">=</button>
         </div>
